@@ -1,24 +1,19 @@
 @echo on
 
 setlocal
-set JAVA_HOME=C:\Java\jdk1.8.0_131
+set JAVA_HOME=D:\Java\jdk-11.0.2+9
 set PATH=%JAVA_HOME%\bin;%PATH%
-set WEBAPP_HOME=C:\webapps\ksbysample-webapp-lending
-set WEBAPP_JAR=ksbysample-webapp-lending-1.5.4-RELEASE.jar
+set WEBAPP_HOME=D:\webapps\ksbysample-webapp-lending
+set WEBAPP_JAR=ksbysample-webapp-lending-2.1.3-RELEASE.jar
 set LOGS_DIR=%WEBAPP_HOME%\logs
 set PATH_HEAPDUMPFILE=%LOGS_DIR%\heapdump.hprof
 set PATH_ERRORFILE=%LOGS_DIR%\hs_err.log
 
 cd /d %WEBAPP_HOME%
-java -server ^
-     -Xms1024m -Xmx1024m ^
+java -Xms1024m -Xmx1024m ^
      -XX:MaxMetaspaceSize=384m ^
-     -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled ^
-     -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=75 ^
-     -XX:+ScavengeBeforeFullGC -XX:+CMSScavengeBeforeRemark ^
-     -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps ^
-     -Xloggc:%WEBAPP_HOME%/logs/gc.log ^
-     -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=5 -XX:GCLogFileSize=10M ^
+     -XX:+UseParallelGC ^
+     -Xlog:gc*=debug:logs/gc.log:time,level,tags:filesize=10m,filecount=5 ^
      -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=%PATH_HEAPDUMPFILE% ^
      -XX:+CrashOnOutOfMemoryError ^
      -XX:ErrorFile=%PATH_ERRORFILE% ^
